VA-920 Fix header padding on mobile view

--- a/src/styles/h5p-result-screen.css
+++ b/src/styles/h5p-result-screen.css
@@ -88,6 +88,10 @@
   box-shadow: 10px 10px 20px 5px rgba(0, 0, 0, 0.08);
   border-bottom: none;
   padding: 0 var(--h5p-theme-spacing-m);
+
+  @container h5p-theme-result-screen (max-width: 576px) {
+    padding: 0 var(--h5p-theme-spacing-s);
+  }
 }
 
 .h5p-theme-results-list-heading h3 {
